--- a/index.html
+++ b/index.html
@@ -498,6 +498,31 @@
         </div>
       </div>
     </footer>
+	  
+	   <video playsinline muted loop autoplay class="video" >
+      <source
+        src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.webm"
+        type="video/webm"
+      />
+      Your browser does not support the video tag.
+    </video>
+
+    <video playsinline muted loop controls poster="./assets/video-cover.png" class="video" >
+      <source
+        src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.webm"
+        type="video/webm"
+      />
+      Your browser does not support the video tag.
+    </video>
+
+    <video playsinline muted loop poster="./assets/video-cover.png" class="video" >
+      <source
+        src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.webm"
+        type="video/webm"
+      />
+      Your browser does not support the video tag.
+    </video>
+   
 
 
     <!-- Owl Carousel  -->
