--- a/index.html
+++ b/index.html
@@ -500,10 +500,18 @@
     </footer>
 	  
 	   <video playsinline muted loop autoplay class="video" >
-      <source
+    <source
         src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.webm"
         type="video/webm"
       />
+      <source
+      src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.mp4"
+      type="video/mp4"
+    />
+    <source
+    src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.mov"
+    type="video/mov"
+  />
       Your browser does not support the video tag.
     </video>
 
@@ -512,14 +520,30 @@
         src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.webm"
         type="video/webm"
       />
+      <source
+      src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.mp4"
+      type="video/mp4"
+    />
+    <source
+    src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.mov"
+    type="video/mov"
+  />
       Your browser does not support the video tag.
     </video>
 
     <video playsinline muted loop poster="./assets/video-cover.png" class="video" >
-      <source
+     <source
         src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.webm"
         type="video/webm"
       />
+      <source
+      src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.mp4"
+      type="video/mp4"
+    />
+    <source
+    src="https://mazwai.com/videvo_files/video/free/2016-01/small_watermarked/Forest_15_2_Videvo_preview.mov"
+    type="video/mov"
+  />
       Your browser does not support the video tag.
     </video>
    
