--- a/index.html
+++ b/index.html
@@ -685,6 +685,7 @@
                 playsinline
                 muted
                 loop
+                     autoplay
                 controls="true"
                 class="playvideo"
                  
